@@ -7,22 +7,18 @@ import javafx.scene.layout.VBox;
 
 public class EnergyChart {
     private final int MAX_POINTS = 2000;
-
     private final VBox container;
-    private final LineChart<Number, Number> kinChart;
-    private final LineChart<Number, Number> potTotalChart;
-
-    private final String nameTitel1 = "Energy (eV): K:(red)";
-    private final String nameTitel2 = "Energy (eV): T:(black), V:(green)";
-    private final String styleEK = "-fx-stroke: #ff0505; -fx-stroke-width: 5px;";
-    private final String styleEP = "-fx-stroke: #00fa25; -fx-stroke-width: 5px";
-    private final String styleET = "-fx-stroke: #0d0c0c; -fx-stroke-width: 5px";
 
     private final XYChart.Series<Number, Number> eKSeries = new XYChart.Series<>();
     private final XYChart.Series<Number, Number> ePSeries = new XYChart.Series<>();
     private final XYChart.Series<Number, Number> eTSeries = new XYChart.Series<>();
 
     public EnergyChart() {
+        final LineChart<Number, Number> kinChart;
+        final LineChart<Number, Number> potTotalChart;
+        final String nameTitle1 = "Energy (eV): K:(red)";
+        final String nameTitle2 = "Energy (eV): T:(black), V:(green)";
+
         // ============= GRAPH 1 ==================
         NumberAxis xKin = new NumberAxis();
         NumberAxis yKin = new NumberAxis();
@@ -35,7 +31,7 @@ public class EnergyChart {
 
         kinChart = new LineChart<>(xKin, yKin);
         kinChart.setAnimated(false);
-        kinChart.setTitle(nameTitel1);
+        kinChart.setTitle(nameTitle1);
         kinChart.setCreateSymbols(false);
         kinChart.setLegendVisible(false);
         kinChart.getData().add(eKSeries);
@@ -52,7 +48,7 @@ public class EnergyChart {
 
         potTotalChart = new LineChart<>(xPot, yPot);
         potTotalChart.setAnimated(false);
-        potTotalChart.setTitle(nameTitel2);
+        potTotalChart.setTitle(nameTitle2);
         potTotalChart.setCreateSymbols(false);
         potTotalChart.setLegendVisible(false);
         potTotalChart.getData().add(ePSeries);
@@ -64,23 +60,23 @@ public class EnergyChart {
 
     public void addPointEK(double time, double energyKinetick) {
         /*
-        * +---------------------------+
-        * |Add points enegry kinetick.|
-        * +---------------------------+
+        * +--------------------------+
+        * |Add points energy kinetic.|
+        * +--------------------------+
         */
         XYChart.Data<Number, Number> point = new XYChart.Data<>(
             time, energyKinetick);
 
         eKSeries.getData().add(point);
         if (eKSeries.getData().size() > MAX_POINTS) {
-            eKSeries.getData().remove(0);
+            eKSeries.getData().removeFirst();
         }
     }
 
     public void addPointEP(double time, double energyPotential) {
         /*
         * +----------------------------+
-        * |Add points enegry potential.|
+        * |Add points energy potential.|
         * +----------------------------+
         */
         XYChart.Data<Number, Number> point = new XYChart.Data<>(
@@ -88,14 +84,14 @@ public class EnergyChart {
 
         ePSeries.getData().add(point);
         if (ePSeries.getData().size() > MAX_POINTS) {
-            ePSeries.getData().remove(0);
+            ePSeries.getData().removeFirst();
         }
     }
 
     public void addPointET(double time, double energyTotal) {
         /*
         * +------------------------+
-        * |Add points enegry total.|
+        * |Add points energy total.|
         * +------------------------+
         */
         XYChart.Data<Number, Number> point = new XYChart.Data<>(
@@ -103,19 +99,22 @@ public class EnergyChart {
 
         eTSeries.getData().add(point);
         if (eTSeries.getData().size() > MAX_POINTS) {
-            eTSeries.getData().remove(0);
+            eTSeries.getData().removeFirst();
         }
     }
 
     public void appendStyleEK() {
+        final String styleEK = "-fx-stroke: #ff0505; -fx-stroke-width: 5px;";
         eKSeries.getNode().setStyle(styleEK);
     }
 
     public void appendStyleEP() {
+        final String styleEP = "-fx-stroke: #00fa25; -fx-stroke-width: 5px";
         ePSeries.getNode().setStyle(styleEP);
     }
 
     public void appendStyleET() {
+        final String styleET = "-fx-stroke: #0d0c0c; -fx-stroke-width: 5px";
         eTSeries.getNode().setStyle(styleET);
     }
 
